[RESTEASY-1724] updates for jdk9 GA